syntax = "proto3";
package Protocol;

import "Enum.proto";

message ObjectInfo {
  int32 objectId = 1;
  string name = 2;
  PositionInfo posInfo = 3;
  StatInfo statInfo = 4;
}

message PositionInfo {
  CreatureState state = 1;
  float posX = 2;
  float posZ = 3;
}

message StatInfo {
  int32 level = 1;
  int32 hp = 2;
  int32 maxHp = 3;
  int32 attack = 4;
  float speed = 5;
  int32 totalExp = 6;
  int32 defense = 7;
  int32 mp = 8;
  int32 maxMp = 9;
}

message PlayerInfo {
  string name = 1;
  int32 GoldAmount=2;
}

message ItemInfo {
  int32 itemDbId = 1;
  int32 templateId = 2;
  int32 count = 3;
  int32 slot = 4;
  bool equipped = 5;
  bool isOnMarket = 6;
}

message MarketItemInfo {
  int32 itemDbId = 1;
  int32 templateId = 2;
  int32 cost = 3;
}
